--- a/templates/add_user.html.twig
+++ b/templates/add_user.html.twig
@@ -8,19 +8,17 @@
     <h1>Add New User</h1>
 
     {# Display any form errors here #}
-    {% if errors is not empty %}
-        <div class="alert alert-danger">
-            <ul>
-                {% for error in errors %}
-                    <li>{{ error.message }}</li>
-                {% endfor %}
-            </ul>
-        </div>
-    {% endif %}
+    {{ form_errors(form) }}
 
     {# Render the form #}
     {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button type="submit" class="btn btn-primary">Submit</button>
+        {{ form_row(form.email) }}
+        {{ form_row(form.password) }}
+        {{ form_row(form.firstName) }}
+        {{ form_row(form.lastName) }}
+        {{ form_row(form.phoneNumber) }}
+        {# Add more form fields here if needed #}
+
+        <button type="submit" class="btn btn-primary">Submit</button>
     {{ form_end(form) }}
 {% endblock %}
