--- a/templates/reset_password.html.twig
+++ b/templates/reset_password.html.twig
@@ -10,8 +10,19 @@
     <h1>Réinitialisation de mot de passe</h1>
     <p>Bonjour,</p>
     <p>Vous avez demandé la réinitialisation de votre mot de passe. Veuillez cliquer sur le lien ci-dessous pour procéder à la réinitialisation :</p>
-    <a href="{{ path('reset_password', {'token': token}) }}">Réinitialiser le mot de passe</a>
+    <a href="{{ 'https://127.0.0.1:8000/reset_password/?token=' ~ token }}">Réinitialiser le mot de passe</a>
     <p>Si vous n'avez pas demandé cette réinitialisation, veuillez ignorer cet e-mail.</p>
     <p>Merci.</p>
+
+    {# Render the reset password form #}
+    {{ form_start(form) }}
+    {{ form_widget(form) }}
+    <button type="submit">Réinitialiser</button>
+    {{ form_end(form) }}
+
+    {# Display toast message if any #}
+    {% if toast %}
+    <div>{{ toast }}</div>
+    {% endif %}
 </body>
 </html>
